[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/L3_forest/tangle_fg.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/L3_forest/vignette.png" type="Texture" id=3]
[ext_resource path="res://sprites/L3_forest/tangle_bg-min.png" type="Texture" id=4]
[ext_resource path="res://Levels/2.0 - Forest/Tangle.gd" type="Script" id=5]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/ForestFolk/Motorcycle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=11]

[node name="Tangle" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1380.0
margin_top = -1098.58
margin_right = 4127.0
margin_bottom = 3457.42
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="tangle_bg-min" type="Sprite" parent="."]
position = Vector2( 546.733, 608.796 )
texture = ExtResource( 4 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 184.132, 1274.51 )
camera = NodePath("../../PuppyCamera")

[node name="Motorcycle" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 548.023, 1084.15 )

[node name="tangle_fg" type="Sprite" parent="."]
position = Vector2( 546.733, 608.796 )
texture = ExtResource( 1 )

[node name="PuppyCamera" parent="." instance=ExtResource( 6 )]
position = Vector2( 929.997, 677.082 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -2516.32, -6774.45 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 2859.5, 4974.77 )

[node name="BottomSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 541.722, 1645.55 )

[node name="TopSP" parent="." instance=ExtResource( 8 )]
position = Vector2( 855.498, 271.659 )

[node name="vignette_fade" type="Sprite" parent="."]
position = Vector2( 607.895, 1600.88 )
rotation = -1.5708
scale = Vector2( 0.268688, 1 )
texture = ExtResource( 11 )

[node name="vignette" type="Sprite" parent="."]
position = Vector2( 507.617, 530.937 )
rotation = 1.5708
scale = Vector2( 1.44583, 1.14444 )
texture = ExtResource( 3 )

[editable path="PuppyCamera"]
